# Projet_PROG5

./: .gitignore  Makefile.am  Makefile.in  configure  header.gdb  header_elf.h  reloc.gdb  sections.gdb  symboles.gdb  test_contenu_section.sh  test_header.sh  test_reloc.sh  test_sect_head.sh  test_table_symbole.sh
Examples_loader/: Makefile.am  Makefile.in  configure  example10.s  example12.s  example13.s  example14.s  example17.s  example9.s
Header/: header_elf.h
docs/: README.md
elf_lib/: elf_lib.c  elf_lib.h  elf_utils.c  elf_utils.h
elf_read/: elf_read.c
elf_reloc/: elf_reloc.c
